--- a/cabinet.html
+++ b/cabinet.html
@@ -124,12 +124,17 @@
                 </div>
             </nav>
             <div class="mobile-auth-buttons">
-                <a href="index.html" class="mobile-logout-btn" id="mobileLogoutBtn">
-                    <svg viewBox="0 0 24 24">
-                        <path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/>
-                    </svg>
-                    Выйти
-                </a>
+                <div class="mobile-user-profile" id="mobileUserProfile">
+                    <div class="mobile-user-avatar" id="mobileUserAvatar"></div>
+                    <div class="mobile-user-name" id="mobileUserName"></div>
+                    <a href="cabinet.html" class="mobile-cabinet-link">Личный кабинет</a>
+                    <a href="index.html" class="mobile-logout-btn" id="mobileLogoutBtn">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M17 7l-1.41 1.41L18.17 11H8v2h10.17l-2.58 2.58L17 17l5-5zM4 5h8V3H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8v-2H4V5z"/>
+                        </svg>
+                        Выйти
+                    </a>
+                </div>
             </div>
         </div>
     </header>
