--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
                 <div class="mobile-auth-buttons">
                     <a href="#" class="login-btn" id="mobileLoginBtn">вход</a>
                     <a href="#" class="signup-btn" id="mobileRegisterBtn">регистрация</a>
+                    <div class="mobile-user-profile" id="mobileUserProfile" style="display:none;">
+                        <div class="mobile-user-avatar" id="mobileUserAvatar"></div>
+                        <div class="mobile-user-name" id="mobileUserName"></div>
+                        <a href="cabinet.html" class="mobile-cabinet-link">Личный кабинет</a>
+                        <a href="#" class="mobile-logout-btn" id="mobileLogoutBtn">Выйти</a>
+                    </div>
                 </div>
             </div>
         </header>
