--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Aëtix</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" media="print" onload="this.media='all'">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+        media="print" onload="this.media='all'">
+
 </head>
 
 <body>
@@ -142,7 +143,7 @@
         <section class="hero">
             <div class="hero-video-container">
                 <video class="hero-background-video" autoplay loop muted playsinline>
-                   <source src="./videos/cloudvps_video_background (1).mp4" type="video/mp4">>
+                    <source src="./videos/cloudvps_video_background (1).mp4" type="video/mp4">>
                 </video>
                 <div class="video-overlay"></div>
             </div>
@@ -172,8 +173,8 @@
         </section>
 
         <section class="spacer">
-            <img src="./videos/Flow 1512p-25fps.gif" alt="Cloud Hosting Animation"
-                style="width: 100%; height: auto; display: block;" loading="lazy" />
+            <video src="./videos/Flow 1512p-25fps.mp4" autoplay loop muted playsinline
+                style="width: 100%; height: auto; display: block;" loading="lazy"></video>
         </section>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
