--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
     <script src="./scripts/main.js" defer></script>
     <script src="./scripts/header.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script src="./scripts/fancybox-video.js" defer></script>
 
     <div class="mobile-menu">
         <div class="mobile-menu-content">
