added a lot of things

--- a/cabinet.html
+++ b/cabinet.html
@@ -27,19 +27,19 @@
                             </div>
                             <div class="dropdown-menu" id="services-menu">
                                 <a href="tarifs.html" class="dropdown-link">
-                                    <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                    <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                     Виртуальные серверы
                                 </a>
                                 <a href="high_cpu.html" class="dropdown-link">
-                                    <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                    <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                     HIGH-CPU серверы
                                 </a>
                                 <a href="dedicated-servers.html" class="dropdown-link">
-                                    <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                    <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                     Выделенные серверы
                                 </a>
                                 <a href="storage_vps.html" class="dropdown-link">
-                                    <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                    <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                     storage VPS
                                 </a>
                             </div>
@@ -103,19 +103,19 @@
                         </div>
                         <div class="mobile-dropdown-menu">
                             <a href="tarifs.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Виртуальные серверы
                             </a>
                             <a href="high_cpu.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 HIGH-CPU серверы
                             </a>
                             <a href="dedicated-servers.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Выделенные серверы
                             </a>
                             <a href="storage_vps.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 storage VPS
                             </a>
                         </div>
