--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                                 </div>
                                 <div class="dropdown-menu" id="services-menu">
                                     <a href="tarifs.html" class="dropdown-link">
-                                        <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         Виртуальные серверы
                                     </a>
                                     <a href="high_cpu.html" class="dropdown-link">
-                                        <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         HIGH-CPU серверы
                                     </a>
                                     <a href="dedicated-servers.html" class="dropdown-link">
-                                        <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         Выделенные серверы
                                     </a>
                                     <a href="storage_vps.html" class="dropdown-link">
-                                        <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         storage VPS
                                     </a>
                                 </div>
@@ -106,19 +106,19 @@
                         </button>
                         <div class="mobile-dropdown-menu">
                             <a href="tarifs.html" class="mobile-dropdown-link">
-                                <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Виртуальные серверы
                             </a>
                             <a href="high_cpu.html" class="mobile-dropdown-link">
-                                <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 HIGH-CPU серверы
                             </a>
                             <a href="dedicated-servers.html" class="mobile-dropdown-link">
-                                <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Выделенные серверы
                             </a>
                             <a href="storage_vps.html" class="mobile-dropdown-link">
-                                <img src="./Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="./Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 storage VPS
                             </a>
                         </div>
@@ -257,7 +257,7 @@
         </section>
 
         <section class="services-overview">
-            <div class="service-card" style="background-image: url('./Images/cloudhosting.png');">
+            <div class="service-card" style="background-image: url('./Images/cloudhosting.webp');">
                 <div>
                     <h3 class="service-title">Виртуальные серверы</h3>
                     <p class="service-description">Виртуальные серверы на SSD</p>
@@ -274,7 +274,7 @@
                     </svg>
                 </a>
             </div>
-            <div class="service-card" style="background-image: url('./Images/ryzen.png');">
+            <div class="service-card" style="background-image: url('./Images/ryzen.webp');">
                 <div>
                     <h3 class="service-title">Выделенные<br>серверы</h3>
                     <p class="service-description">Мощные серверы для проектов</p>
@@ -291,7 +291,7 @@
                     </svg>
                 </a>
             </div>
-            <div class="service-card" style="background-image: url('./Images/ddos.png');">
+            <div class="service-card" style="background-image: url('./Images/ddos.webp');">
                 <div>
                     <h3 class="service-title">Защита</h3>
                     <p class="service-description">Защита от DDoS-атак</p>
@@ -348,21 +348,21 @@
         <section class="why-aetix">
             <h2 class="section-title">Почему aëtix?</h2>
             <div class="advantages-container">
-                <div class="advantage-card" style="background-image: url('./Images/first.png');">
+                <div class="advantage-card" style="background-image: url('./Images/first.webp');">
                     <div class="advantage-icon">
                         <img src="./Images/chat.svg" alt="Иконка чата">
                     </div>
                     <h3 class="advantage-title">Поддержка</h3>
                     <p class="advantage-description">Быстрые ответы в чате</p>
                 </div>
-                <div class="advantage-card" style="background-image: url('./Images/second.png');">
+                <div class="advantage-card" style="background-image: url('./Images/second.webp');">
                     <div class="advantage-icon">
                         <img src="./Images/backup.svg" alt="Иконка бэкапа">
                     </div>
                     <h3 class="advantage-title">Бэкапы</h3>
                     <p class="advantage-description">Резервное копирование</p>
                 </div>
-                <div class="advantage-card" style="background-image: url('./Images/third.png');">
+                <div class="advantage-card" style="background-image: url('./Images/third.webp');">
                     <div class="advantage-icon">
                         <img src="./Images/pay.svg" alt="Иконка оплаты">
                     </div>
@@ -377,7 +377,7 @@
 
                 <div class="video-wrapper">
                     <a href="videos/Project 5.mp4" data-fancybox="video-gallery" class="video-thumbnail">
-                        <img src="Images/unnamed.jpg" alt="Video thumbnail" loading="lazy">
+                        <img src="Images/unnamed.webp" alt="Video thumbnail" loading="lazy">
                         <div class="play-button">
                             <svg width="68" height="48" viewBox="0 0 68 48">
                                 <path
@@ -532,6 +532,9 @@
             </nav>
         </div>
     </div>
+    <div style="text-align: center; margin-bottom: 50px;">
+        <a href="up_otchet (2) (2) (8).pdf">Отчет</a>
+      </div>
 </body>
 
 </html>
