--- a/tarifs.html
+++ b/tarifs.html
@@ -32,19 +32,19 @@
                                 </div>
                                 <div class="dropdown-menu">
                                     <a href="tarifs.html" class="dropdown-link">
-                                        <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         Виртуальные серверы
                                     </a>
                                     <a href="high_cpu.html" class="dropdown-link">
-                                        <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         HIGH-CPU серверы
                                     </a>
                                     <a href="dedicated-servers.html" class="dropdown-link">
-                                        <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         Выделенные серверы
                                     </a>
                                     <a href="storage_vps.html" class="dropdown-link">
-                                        <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                        <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                         storage VPS
                                     </a>
                                 </div>
@@ -104,19 +104,19 @@
                         </button>
                         <div class="mobile-dropdown-menu">
                             <a href="tarifs.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Виртуальные серверы
                             </a>
                             <a href="high_cpu.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 HIGH-CPU серверы
                             </a>
                             <a href="dedicated-servers.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 Выделенные серверы
                             </a>
                             <a href="storage_vps.html" class="mobile-dropdown-link">
-                                <img src="Images/cloudhosting.png" alt="icon" class="dropdown-icon">
+                                <img src="Images/cloudhosting.webp" alt="icon" class="dropdown-icon">
                                 storage VPS
                             </a>
                         </div>
@@ -147,7 +147,7 @@
                 </div>
 
                 <video autoplay="" loop="" playsinline="" disablepictureinpicture="" class="sc-11485f23-4 iGhjqz">
-                    <source src="https://io.aeza.net/videos/cloud.mp4" type="video/mp4">
+                    <source src="videos/0001-0130 (1).mp4" type="video/mp4">
                 </video>
 
                 <div class="sc-11485f23-8 cUqbaZ">
@@ -180,7 +180,7 @@
 
             <div class="locations-list">
                 <a href="#" class="location-item active">
-                    <img src="Images/free-icon-united-states-206626.png" alt="Денвер">
+                    <img src="Images/free-icon-united-states-206626.webp" alt="Денвер">
                     <span>Денвер</span>
                 </a>
                 <a href="#" class="location-item">
@@ -578,39 +578,39 @@
             </div>
         </main>
 
-        <img class="os-collage-image" src="Images/devices (1) 2.png" alt="OS Screens Collage">
+        <img class="os-collage-image" src="Images/devices (1) 2.webp" alt="OS Screens Collage">
 
         <section class="features-section">
             <h2 class="features-title">почему наши серверы?</h2>
             <div class="features-grid">
-                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 67.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 67.webp');">
                     <div class="feature-content">
                         <h3>ddos-защита</h3>
                         <p>до 2 Тбит/с трафика очистки, до 600 Гбит/с тонкой фильтрации. Защита включена в стоимость и
                             работает постоянно</p>
                     </div>
                 </div>
-                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 68.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 68.webp');">
                     <div class="feature-content">
                         <h3>почасовая оплата</h3>
                         <p>быстрые облачные серверы, масштабируются на лету. Заказывайте сколько хотите, платите только
                             за то, что нужно</p>
                     </div>
                 </div>
-                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 69.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 69.webp');">
                     <div class="feature-content">
                         <h3>современное оборудование</h3>
                         <p>современные процессоры AMD Ryzen, накопители в RAID до 10 Гбит/с и NVMe-SSD</p>
                     </div>
                 </div>
-                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 70.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 70.webp');">
                     <div class="feature-content">
                         <h3>простое управление и API</h3>
                         <p>создание и работа с серверами в личном кабинете. Автоматизация управления с помощью REST API
                             и удобная документация</p>
                     </div>
                 </div>
-                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 71.png');">
+                <div class="feature-card animate-on-scroll" style="background-image: url('Images/Rectangle\ 71.webp');">
                     <div class="feature-content">
                         <h3>резервное копирование</h3>
                         <p>будьте спокойны за сохранность своих данных. Резервное копирование доступно в пару кликов и
@@ -865,17 +865,17 @@
                     <label for="billingPeriod">Период оплаты</label>
                     <div class="custom-select" id="customBillingPeriod">
                         <div class="selected-option">
-                            <img src="Images/free-icon-time-5058458.png" alt="Почасовая оплата" class="option-icon">
+                            <img src="Images/free-icon-time-5058458.webp" alt="Почасовая оплата" class="option-icon">
                             <span class="option-label">Почасовая оплата</span>
                             <span class="arrow">&#9662;</span>
                         </div>
                         <div class="options-list">
                             <div class="option-item" data-value="hourly">
-                                <img src="Images/free-icon-time-5058458.png" alt="Почасовая оплата" class="option-icon">
+                                <img src="Images/free-icon-time-5058458.webp" alt="Почасовая оплата" class="option-icon">
                                 <span>Почасовая оплата</span>
                             </div>
                             <div class="option-item" data-value="monthly">
-                                <img src="Images/free-icon-calendar-1207480.png" alt="Ежемесячная оплата" class="option-icon">
+                                <img src="Images/free-icon-calendar-1207480.webp" alt="Ежемесячная оплата" class="option-icon">
                                 <span>Ежемесячная оплата</span>
                             </div>
                         </div>
@@ -908,7 +908,7 @@
                                 <span>Лондон</span>
                             </div>
                             <div class="option-item" data-value="denver">
-                                <img src="Images/free-icon-united-states-206626.png" alt="Денвер" class="option-icon">
+                                <img src="Images/free-icon-united-states-206626.webp" alt="Денвер" class="option-icon">
                                 <span>Денвер</span>
                             </div>
                             <div class="option-item" data-value="vienna">
@@ -975,6 +975,47 @@
                         </div>
                     </div>
                     <input type="hidden" name="os" id="os" value="windows">
+                </div>
+                <div class="order-form-group">
+                    <label for="paymentMethod">Способ оплаты</label>
+                    <div class="custom-select" id="customPaymentMethod">
+                        <div class="selected-option">
+                            <img src="Images/62882creditcard_109312.svg" alt="Банковская карта" class="option-icon">
+                            <span class="option-label">Банковская карта</span>
+                            <span class="arrow">&#9662;</span>
+                        </div>
+                        <div class="options-list">
+                            <div class="option-item" data-value="card">
+                                <img src="Images/62882creditcard_109312.svg" alt="Банковская карта" class="option-icon">
+                                <span>Банковская карта</span>
+                            </div>
+                            <div class="option-item" data-value="international">
+                                <img src="Images/16credit-card_102121.svg" alt="Международная карта" class="option-icon">
+                                <span>Международная карта</span>
+                            </div>
+                            <div class="option-item" data-value="sbp">
+                                <img src="Images/images.png" alt="СБП" class="option-icon">
+                                <span>СБП</span>
+                            </div>
+                            <div class="option-item" data-value="usdt-trc20">
+                                <img src="Images/5r8_zDRco8RuYLn6H-Blx1DsT46QMBPv9w.webp" alt="USDT (TRC20)" class="option-icon">
+                                <span>USDT (TRC20)</span>
+                            </div>
+                            <div class="option-item" data-value="bnb">
+                                <img src="Images/images (1).png" alt="BNB" class="option-icon">
+                                <span>BNB</span>
+                            </div>
+                            <div class="option-item" data-value="bitcoin">
+                                <img src="Images/Bitcoin.svg.webp" alt="Bitcoin" class="option-icon">
+                                <span>Bitcoin</span>
+                            </div>
+                            <div class="option-item" data-value="ton">
+                                <img src="Images/images.jpg" alt="TON" class="option-icon">
+                                <span>TON</span>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="hidden" name="paymentMethod" id="paymentMethod" value="card">
                 </div>
                 <div class="order-form-summary">
                     <div class="order-form-summary-item">
