--- a/cabinet.html
+++ b/cabinet.html
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <div class="nav-item">
-                            <a href="/contact.html" class="nav-link">информация</a>
+                            <a href="contact.html" class="nav-link">информация</a>
                         </div>
                     </div>
                 </nav>
@@ -120,7 +120,9 @@
                             </a>
                         </div>
                     </div>
-                    <a href="contact.html" class="mobile-nav-link">информация</a>
+                    <div class="mobile-nav-item">
+                        <a href="contact.html" class="mobile-nav-link">информация</a>
+                    </div>
                 </div>
             </nav>
             <div class="mobile-auth-buttons">
