--- a/dedicated-servers.html
+++ b/dedicated-servers.html
@@ -50,7 +50,7 @@
                                 </div>
                             </div>
                             <div class="nav-item">
-                                <a href="/contact.html" class="nav-link">информация</a>
+                                <a href="contact.html" class="nav-link">информация</a>
                             </div>
                         </div>
                     </nav>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="mobile-nav-item">
-                        <a href="/contact.html" class="mobile-nav-link">информация</a>
+                        <a href="contact.html" class="mobile-nav-link">информация</a>
                     </div>
                 </nav>
                 <div class="mobile-auth-buttons">
