--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="mobile-nav-item">
-                        <a href="/contact.html" class="mobile-nav-link">информация</a>
+                        <a href="contact.html" class="mobile-nav-link">информация</a>
                     </div>
                 </nav>
                 <div class="mobile-auth-buttons">
