--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
                 <div class="video-wrapper">
                     <a href="videos/Project 5.mp4" data-fancybox="video-gallery" class="video-thumbnail">
-                        <img src="Images/unnamed.webp" alt="Video thumbnail" loading="lazy">
+                        <img src="Images/poster-vid-logo.png" alt="Video thumbnail" loading="lazy">
                         <div class="play-button">
                             <svg width="68" height="48" viewBox="0 0 68 48">
                                 <path
